Focus on fields

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -96,3 +96,5 @@ notAvailableViewTitle=<TransferOrders>
 
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
+ucErrada=Selecionar a UC correta.
+posicaoErrada=Selecionar a posição correta
