--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -56,7 +56,7 @@ masterGroup1Header2=<Quantity> higher than 20
 #~~~ Detail View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 #XTIT: Detail view title
-detailTitle=Reabastecimento
+detailTitle=Processar Ordem
 
 #XTOL: Icon Tab Bar Info
 detailIconTabBarInfo=Info
